exports[`no-blob-to-file > invalid(1): const blob = new Blob();\nconst file = new File([blob], \"image.jpg\");\nURL.createObjectURL(file); 1`] = `

  1 | const blob = new Blob();
  2 | const file = new File([blob], "image.jpg");
  3 | URL.createObjectURL(file);

`;

exports[`no-blob-to-file > invalid(1): const blob = new Blob();\nconst file = new File([blob], \"image.jpg\");\nURL.createObjectURL(file); 2`] = `

Message:
  1 | const blob = new Blob();
> 2 | const file = new File([blob], "image.jpg");
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use the original \`Blob\` instead of converting it to a \`File\`.
  3 | URL.createObjectURL(file);

Suggestion 1/1: Replace the \`File\` with the original \`Blob\`.:
  1 | const blob = new Blob();
  2 | URL.createObjectURL(blob);

`;

exports[`no-blob-to-file > invalid(10): const blob = new Blob();\nconst formData = new FormData();\nconst file = new File([blob], \"image.jpg\");\nformData.append(\"file\", file, name); 1`] = `

  1 | const blob = new Blob();
  2 | const formData = new FormData();
  3 | const file = new File([blob], "image.jpg");
  4 | formData.append("file", file, name);

`;

exports[`no-blob-to-file > invalid(10): const blob = new Blob();\nconst formData = new FormData();\nconst file = new File([blob], \"image.jpg\");\nformData.append(\"file\", file, name); 2`] = `

Message:
  1 | const blob = new Blob();
  2 | const formData = new FormData();
> 3 | const file = new File([blob], "image.jpg");
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use the original \`Blob\` instead of converting it to a \`File\`.
  4 | formData.append("file", file, name);

Suggestion 1/1: Replace the \`File\` with the original \`Blob\`.:
  1 | const blob = new Blob();
  2 | const formData = new FormData();
  3 | formData.append("file", blob, name);

`;

exports[`no-blob-to-file > invalid(11): const blob = new Blob();\nconst file = new File([blob], \"image.jpg\"); // Keep comment\nURL.createObjectURL(file); 1`] = `

  1 | const blob = new Blob();
  2 | const file = new File([blob], "image.jpg"); // Keep comment
  3 | URL.createObjectURL(file);

`;

exports[`no-blob-to-file > invalid(11): const blob = new Blob();\nconst file = new File([blob], \"image.jpg\"); // Keep comment\nURL.createObjectURL(file); 2`] = `

Message:
  1 | const blob = new Blob();
> 2 | const file = new File([blob], "image.jpg"); // Keep comment
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use the original \`Blob\` instead of converting it to a \`File\`.
  3 | URL.createObjectURL(file);

`;

exports[`no-blob-to-file > invalid(12): const blob = new Blob();\nconst file = new File([/* Keep comment */ blob], \"image.jpg\");\nURL.createObjectURL(file); 1`] = `

  1 | const blob = new Blob();
  2 | const file = new File([/* Keep comment */ blob], "image.jpg");
  3 | URL.createObjectURL(file);

`;

exports[`no-blob-to-file > invalid(12): const blob = new Blob();\nconst file = new File([/* Keep comment */ blob], \"image.jpg\");\nURL.createObjectURL(file); 2`] = `

Message:
  1 | const blob = new Blob();
> 2 | const file = new File([/* Keep comment */ blob], "image.jpg");
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use the original \`Blob\` instead of converting it to a \`File\`.
  3 | URL.createObjectURL(file);

`;

exports[`no-blob-to-file > invalid(13): const blob = new Blob(); /* Keep comment */ const file = new File([blob], \"image.jpg\");\nURL.createObjectURL(file); 1`] = `

  1 | const blob = new Blob(); /* Keep comment */ const file = new File([blob], "image.jpg");
  2 | URL.createObjectURL(file);

`;

exports[`no-blob-to-file > invalid(13): const blob = new Blob(); /* Keep comment */ const file = new File([blob], \"image.jpg\");\nURL.createObjectURL(file); 2`] = `

Message:
> 1 | const blob = new Blob(); /* Keep comment */ const file = new File([blob], "image.jpg");
    |                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use the original \`Blob\` instead of converting it to a \`File\`.
  2 | URL.createObjectURL(file);

`;

exports[`no-blob-to-file > invalid(14): const blob = new Blob();\nconst formData = new FormData();\nconst file = new File([blob], \"\");\nformData.append(\"file\", file); 1`] = `

  1 | const blob = new Blob();
  2 | const formData = new FormData();
  3 | const file = new File([blob], "");
  4 | formData.append("file", file);

`;

exports[`no-blob-to-file > invalid(14): const blob = new Blob();\nconst formData = new FormData();\nconst file = new File([blob], \"\");\nformData.append(\"file\", file); 2`] = `

Message:
  1 | const blob = new Blob();
  2 | const formData = new FormData();
> 3 | const file = new File([blob], "");
    |              ^^^^^^^^^^^^^^^^^^^^ Use the original \`Blob\` instead of converting it to a \`File\`.
  4 | formData.append("file", file);

Suggestion 1/1: Replace the \`File\` with the original \`Blob\`.:
  1 | const blob = new Blob();
  2 | const formData = new FormData();
  3 | formData.append("file", blob, "");

`;

exports[`no-blob-to-file > invalid(2): const imageBlob = new Blob();\nconst file = new File([imageBlob], \"image.jpg\");\nURL.createObjectURL(file); 1`] = `

  1 | const imageBlob = new Blob();
  2 | const file = new File([imageBlob], "image.jpg");
  3 | URL.createObjectURL(file);

`;

exports[`no-blob-to-file > invalid(2): const imageBlob = new Blob();\nconst file = new File([imageBlob], \"image.jpg\");\nURL.createObjectURL(file); 2`] = `

Message:
  1 | const imageBlob = new Blob();
> 2 | const file = new File([imageBlob], "image.jpg");
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use the original \`Blob\` instead of converting it to a \`File\`.
  3 | URL.createObjectURL(file);

Suggestion 1/1: Replace the \`File\` with the original \`Blob\`.:
  1 | const imageBlob = new Blob();
  2 | URL.createObjectURL(imageBlob);

`;

exports[`no-blob-to-file > invalid(3): const data = new Blob();\nconst file = new File([data], \"image.jpg\");\nURL.createObjectURL(file); 1`] = `

  1 | const data = new Blob();
  2 | const file = new File([data], "image.jpg");
  3 | URL.createObjectURL(file);

`;

exports[`no-blob-to-file > invalid(3): const data = new Blob();\nconst file = new File([data], \"image.jpg\");\nURL.createObjectURL(file); 2`] = `

Message:
  1 | const data = new Blob();
> 2 | const file = new File([data], "image.jpg");
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use the original \`Blob\` instead of converting it to a \`File\`.
  3 | URL.createObjectURL(file);

Suggestion 1/1: Replace the \`File\` with the original \`Blob\`.:
  1 | const data = new Blob();
  2 | URL.createObjectURL(data);

`;

exports[`no-blob-to-file > invalid(4): const sourceFile = new File([blob], \"source.jpg\");\nconst file = new File([sourceFile], \"image.jpg\");\nURL.createObjectURL(file); 1`] = `

  1 | const sourceFile = new File([blob], "source.jpg");
  2 | const file = new File([sourceFile], "image.jpg");
  3 | URL.createObjectURL(file);

`;

exports[`no-blob-to-file > invalid(4): const sourceFile = new File([blob], \"source.jpg\");\nconst file = new File([sourceFile], \"image.jpg\");\nURL.createObjectURL(file); 2`] = `

Message:
  1 | const sourceFile = new File([blob], "source.jpg");
> 2 | const file = new File([sourceFile], "image.jpg");
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use the original \`Blob\` instead of converting it to a \`File\`.
  3 | URL.createObjectURL(file);

Suggestion 1/1: Replace the \`File\` with the original \`Blob\`.:
  1 | const sourceFile = new File([blob], "source.jpg");
  2 | URL.createObjectURL(sourceFile);

`;

exports[`no-blob-to-file > invalid(5): const blob = new Blob();\nconst formData = new FormData();\nconst file = new File([blob], \`image.jpg\`);\nformData.append(\"file\", file); 1`] = `

  1 | const blob = new Blob();
  2 | const formData = new FormData();
  3 | const file = new File([blob], \`image.jpg\`);
  4 | formData.append("file", file);

`;

exports[`no-blob-to-file > invalid(5): const blob = new Blob();\nconst formData = new FormData();\nconst file = new File([blob], \`image.jpg\`);\nformData.append(\"file\", file); 2`] = `

Message:
  1 | const blob = new Blob();
  2 | const formData = new FormData();
> 3 | const file = new File([blob], \`image.jpg\`);
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use the original \`Blob\` instead of converting it to a \`File\`.
  4 | formData.append("file", file);

Suggestion 1/1: Replace the \`File\` with the original \`Blob\`.:
  1 | const blob = new Blob();
  2 | const formData = new FormData();
  3 | formData.append("file", blob, \`image.jpg\`);

`;

exports[`no-blob-to-file > invalid(6): const blob = new Blob();\nconst formData = new FormData();\nconst file = new File([blob], \"image.jpg\");\nformData.set(\"file\", file); 1`] = `

  1 | const blob = new Blob();
  2 | const formData = new FormData();
  3 | const file = new File([blob], "image.jpg");
  4 | formData.set("file", file);

`;

exports[`no-blob-to-file > invalid(6): const blob = new Blob();\nconst formData = new FormData();\nconst file = new File([blob], \"image.jpg\");\nformData.set(\"file\", file); 2`] = `

Message:
  1 | const blob = new Blob();
  2 | const formData = new FormData();
> 3 | const file = new File([blob], "image.jpg");
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use the original \`Blob\` instead of converting it to a \`File\`.
  4 | formData.set("file", file);

Suggestion 1/1: Replace the \`File\` with the original \`Blob\`.:
  1 | const blob = new Blob();
  2 | const formData = new FormData();
  3 | formData.set("file", blob, "image.jpg");

`;

exports[`no-blob-to-file > invalid(7): const blob = new Blob();\nconst formData = new FormData();\nconst file = new File([blob], \"unused.jpg\");\nformData.append(\"file\", file, \"image.jpg\"); 1`] = `

  1 | const blob = new Blob();
  2 | const formData = new FormData();
  3 | const file = new File([blob], "unused.jpg");
  4 | formData.append("file", file, "image.jpg");

`;

exports[`no-blob-to-file > invalid(7): const blob = new Blob();\nconst formData = new FormData();\nconst file = new File([blob], \"unused.jpg\");\nformData.append(\"file\", file, \"image.jpg\"); 2`] = `

Message:
  1 | const blob = new Blob();
  2 | const formData = new FormData();
> 3 | const file = new File([blob], "unused.jpg");
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use the original \`Blob\` instead of converting it to a \`File\`.
  4 | formData.append("file", file, "image.jpg");

Suggestion 1/1: Replace the \`File\` with the original \`Blob\`.:
  1 | const blob = new Blob();
  2 | const formData = new FormData();
  3 | formData.append("file", blob, "image.jpg");

`;

exports[`no-blob-to-file > invalid(8): const blob = new Blob();\nconst formData = new FormData();\nconst file = new File([blob], \"image.jpg\");\nformData.append(\"file\", file); 1`] = `

  1 | const blob = new Blob();
  2 | const formData = new FormData();
  3 | const file = new File([blob], "image.jpg");
  4 | formData.append("file", file);

`;

exports[`no-blob-to-file > invalid(8): const blob = new Blob();\nconst formData = new FormData();\nconst file = new File([blob], \"image.jpg\");\nformData.append(\"file\", file); 2`] = `

Message:
  1 | const blob = new Blob();
  2 | const formData = new FormData();
> 3 | const file = new File([blob], "image.jpg");
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use the original \`Blob\` instead of converting it to a \`File\`.
  4 | formData.append("file", file);

Suggestion 1/1: Replace the \`File\` with the original \`Blob\`.:
  1 | const blob = new Blob();
  2 | const formData = new FormData();
  3 | formData.append("file", blob, "image.jpg");

`;

exports[`no-blob-to-file > invalid(9): const blob = new Blob();\nconst data = new FormData();\nconst file = new File([blob], \"image.jpg\");\ndata.append(\"file\", file); 1`] = `

  1 | const blob = new Blob();
  2 | const data = new FormData();
  3 | const file = new File([blob], "image.jpg");
  4 | data.append("file", file);

`;

exports[`no-blob-to-file > invalid(9): const blob = new Blob();\nconst data = new FormData();\nconst file = new File([blob], \"image.jpg\");\ndata.append(\"file\", file); 2`] = `

Message:
  1 | const blob = new Blob();
  2 | const data = new FormData();
> 3 | const file = new File([blob], "image.jpg");
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use the original \`Blob\` instead of converting it to a \`File\`.
  4 | data.append("file", file);

Suggestion 1/1: Replace the \`File\` with the original \`Blob\`.:
  1 | const blob = new Blob();
  2 | const data = new FormData();
  3 | data.append("file", blob, "image.jpg");

`;
